# spotify-artists-crud-api

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2aa22acbf576_init.py
app/: background.py  config.py  database.py  main.py  utils.py
app/api/: artist.py
app/models/: __init__.py  artist.py  background_task.py  base.py
app/schemas/: artist.py
app/tasks/: update_artsits.py
tests/: utils.py
tests/api/: test_artists.py
tests/tasks/: test_spotify.py
