[tool.poetry]
name = "spotify-artists-crud-api"
version = "0.1.0"
description = "A small API with CRUD operations on the table with the artists that were got using Spotify API"
authors = ["Ruslan Ibragimov <ruslan.ibragimov@gmal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"
alembic = "1.9.4"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.4"
httpx = "^0.23.3"
rich = "^13.3.2"
uvloop = "^0.17.0"
httptools = "^0.5.0"
apscheduler = "4.0.0a2"
rocketry = "^2.5.1"
python-dotenv = "0.21.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
faker = "^17.6.0"
pytest-mock = "^3.10.0"
pytest-httpx = "^0.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
